# win-zol

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/exceptions/: exceptions.hpp
include/fs/: fs.hpp
include/handles/: handles.hpp
include/memory/: pages.hpp  read.hpp  write.hpp
include/module/: module.hpp
include/process/: open.hpp  process.hpp
include/singleton/: singleton.hpp
include/types/: types.hpp
